--- a/projects/src/translator_static.vcxproj
+++ b/projects/src/translator_static.vcxproj
@@ -48,13 +48,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS;_HAS_EXCEPTIONS=0;_WINDOWS;WIN32;WIN32_LEAN_AND_MEAN;ANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={ TEXT(&quot;d3dcompiler_46.dll&quot;), TEXT(&quot;d3dcompiler_43.dll&quot;) };ANGLE_TRANSLATOR_STATIC;NOMINMAX;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <RuntimeTypeInfo>false</RuntimeTypeInfo>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <TreatWarningAsError>true</TreatWarningAsError>
       <WarningLevel>Level4</WarningLevel>
     </ClCompile>
     <Lib>
       <AdditionalLibraryDirectories>C:/Program Files (x86)/Windows Kits/8.0/Lib/win8/um/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4221 %(AdditionalOptions)</AdditionalOptions>
       <OutputFile>$(OutDir)lib\$(ProjectName)$(TargetExt)</OutputFile>
     </Lib>
     <Link>
@@ -85,13 +84,12 @@
       <Optimization>MaxSpeed</Optimization>
       <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS;_HAS_EXCEPTIONS=0;_WINDOWS;WIN32;WIN32_LEAN_AND_MEAN;ANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={ TEXT(&quot;d3dcompiler_46.dll&quot;), TEXT(&quot;d3dcompiler_43.dll&quot;) };ANGLE_TRANSLATOR_STATIC;NOMINMAX;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <RuntimeTypeInfo>false</RuntimeTypeInfo>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <TreatWarningAsError>true</TreatWarningAsError>
       <WarningLevel>Level4</WarningLevel>
     </ClCompile>
     <Lib>
       <AdditionalLibraryDirectories>C:/Program Files (x86)/Windows Kits/8.0/Lib/win8/um/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalOptions>/ignore:4221 %(AdditionalOptions)</AdditionalOptions>
       <OutputFile>$(OutDir)lib\$(ProjectName)$(TargetExt)</OutputFile>
     </Lib>
     <Link>
@@ -112,155 +110,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\..\src\angle.gyp"/>
-    <None Include="..\..\src\compiler\translator\glslang.y"/>
-    <None Include="..\..\src\compiler\translator\glslang.l"/>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\third_party\compiler\ArrayBoundsClamper.h"/>
-    <ClInclude Include="..\..\src\common\shadervars.h"/>
-    <ClInclude Include="..\..\src\common\RefCountObject.h"/>
-    <ClInclude Include="..\..\src\common\mathutil.h"/>
-    <ClInclude Include="..\..\src\common\event_tracer.h"/>
-    <ClInclude Include="..\..\src\common\debug.h"/>
-    <ClInclude Include="..\..\src\common\version.h"/>
-    <ClInclude Include="..\..\src\common\blocklayout.h"/>
-    <ClInclude Include="..\..\src\common\utilities.h"/>
-    <ClInclude Include="..\..\src\common\angleutils.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\BaseTypes.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\compilerdebug.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\Common.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\UnfoldShortCircuitAST.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\util.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\OutputGLSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\FlagStd140Structs.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\length_limits.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\PoolAlloc.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\BuiltInFunctionEmulator.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\DetectDiscontinuity.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ValidateOutputs.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\UnfoldShortCircuit.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\TranslatorGLSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\SymbolTable.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\InitializeGlobals.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\osinclude.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\Initialize.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\QualifierAlive.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ConstantUnion.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ParseContext.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\Diagnostics.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\VersionGLSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\HashNames.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\DirectiveHandler.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\NodeSearch.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\TranslatorESSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\InitializeDll.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\InitializeVariables.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\localintermediate.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ShHandle.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\OutputGLSLBase.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ForLoopUnroll.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\Pragma.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\intermediate.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\TranslatorHLSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\OutputESSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\RenameFunction.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ValidateLimitations.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\Types.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\InfoSink.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\RemoveTree.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\DetectCallDepth.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\MMap.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\VariablePacker.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\glslang.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\SearchSymbol.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\OutputHLSL.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\InitializeParseContext.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\VariableInfo.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\LoopInfo.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\glslang_tab.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\RewriteElseBlocks.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\ExtensionBehavior.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\timing\RestrictVertexShaderTiming.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\timing\RestrictFragmentShaderTiming.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\depgraph\DependencyGraph.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\depgraph\DependencyGraphOutput.h"/>
-    <ClInclude Include="..\..\src\compiler\translator\depgraph\DependencyGraphBuilder.h"/>
-    <ClInclude Include="..\..\include\KHR\khrplatform.h"/>
-    <ClInclude Include="..\..\include\GLSLANG\ShaderLang.h"/>
-    <ClInclude Include="..\..\include\GLES2\gl2platform.h"/>
-    <ClInclude Include="..\..\include\GLES2\gl2ext.h"/>
-    <ClInclude Include="..\..\include\GLES2\gl2.h"/>
-    <ClInclude Include="..\..\include\GLES3\gl3ext.h"/>
-    <ClInclude Include="..\..\include\GLES3\gl3.h"/>
-    <ClInclude Include="..\..\include\GLES3\gl3platform.h"/>
-    <ClInclude Include="..\..\include\EGL\eglext.h"/>
-    <ClInclude Include="..\..\include\EGL\egl.h"/>
-    <ClInclude Include="..\..\include\EGL\eglplatform.h"/>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\src\third_party\compiler\ArrayBoundsClamper.cpp"/>
-    <ClCompile Include="..\..\src\common\event_tracer.cpp"/>
-    <ClCompile Include="..\..\src\common\utilities.cpp"/>
-    <ClCompile Include="..\..\src\common\RefCountObject.cpp"/>
-    <ClCompile Include="..\..\src\common\mathutil.cpp"/>
-    <ClCompile Include="..\..\src\common\debug.cpp"/>
-    <ClCompile Include="..\..\src\common\shadervars.cpp"/>
-    <ClCompile Include="..\..\src\common\blocklayout.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\InfoSink.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\OutputESSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ValidateLimitations.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\BuiltInFunctionEmulator.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\glslang_lex.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\OutputGLSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\TranslatorHLSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\OutputGLSLBase.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ParseContext.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\RemoveTree.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\InitializeVariables.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\InitializeDll.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\PoolAlloc.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ossource_win.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\RewriteElseBlocks.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\Diagnostics.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\QualifierAlive.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\util.cpp"/>
     <ClCompile Include="..\..\src\compiler\translator\ShaderLang.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ValidateOutputs.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\TranslatorESSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\VariablePacker.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\DirectiveHandler.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\parseConst.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\VersionGLSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\DetectCallDepth.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\InitializeParseContext.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\CodeGen.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\Intermediate.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\IntermTraverse.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\intermOut.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\glslang_tab.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ForLoopUnroll.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\SearchSymbol.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\UnfoldShortCircuitAST.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\TranslatorGLSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\SymbolTable.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\FlagStd140Structs.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\LoopInfo.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\OutputHLSL.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\DetectDiscontinuity.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\UnfoldShortCircuit.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\compilerdebug.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\VariableInfo.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\Compiler.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\Initialize.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\ossource_posix.cpp">
-      <ExcludedFromBuild>true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\src\compiler\translator\timing\RestrictVertexShaderTiming.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\timing\RestrictFragmentShaderTiming.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\depgraph\DependencyGraphTraverse.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\depgraph\DependencyGraphOutput.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\depgraph\DependencyGraph.cpp"/>
-    <ClCompile Include="..\..\src\compiler\translator\depgraph\DependencyGraphBuilder.cpp"/>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
   <ImportGroup Label="ExtensionTargets"/>
