Reference .git/index as a dependency of commit_id.
Any time the git index changes, we will re-run the commit id hook.
This will generate a new commit id any time we change what we're
looking at in the git tree.

BUG=angle:626

Change-Id: I03c37225fb902b6c1801e8f993d767122e8bfeb6

--- a/projects/src/commit_id.vcxproj
+++ b/projects/src/commit_id.vcxproj
@@ -101,6 +101,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\..\src\angle.gyp"/>
+    <None Include="..\..\.git\index">
+      <ExcludedFromBuild>true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="$(OutDir)obj\global_intermediate\commit_id.bat">
@@ -108,6 +111,7 @@
       <Command>call call $(OutDir)obj\global_intermediate\commit_id.bat &quot;$(OutDir)obj\global_intermediate&quot;</Command>
       <Message>Generating commit ID header...</Message>
       <Outputs>$(OutDir)obj\global_intermediate\commit.h</Outputs>
+      <AdditionalInputs>..\..\.git\index</AdditionalInputs>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
