--- a/projects/src/commit_id.vcxproj.filters
+++ b/projects/src/commit_id.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="..\..\src">
       <UniqueIdentifier>{8CDEE807-BC53-E450-C8B8-4DEBB66742D4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="..\..\.git">
+      <UniqueIdentifier>{3C74FDB1-3FB1-8FA9-1073-A344751C6694}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="..\..\.git\_excluded_files">
+      <UniqueIdentifier>{158E591E-B6EA-0C85-8F5A-18EAFA09B4CE}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(OutDir)obj\global_intermediate\commit_id.bat">
@@ -26,6 +32,9 @@
     </None>
     <None Include="..\..\src\angle.gyp">
       <Filter>..\..\src</Filter>
+    </None>
+    <None Include="..\..\.git\index">
+      <Filter>..\..\.git\_excluded_files</Filter>
     </None>
   </ItemGroup>
 </Project>
