Clean up generatemip.h.
* Move "private" functions into generatemip.inl.
* Use size_t for all dimensions.
* use byte pointers instead of unsigned char pointers.

BUG=angle:666

Change-Id: I8a1324802e4d670c042e0961c2b6f6fd53f4ebc7

--- a/projects/src/libGLESv2.vcxproj.filters
+++ b/projects/src/libGLESv2.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="..\..\src\libGLESv2\renderer\TextureStorage.cpp">
       <Filter>src\libGLESv2\renderer</Filter>
     </ClCompile>
+    <None Include="..\..\src\libGLESv2\renderer\generatemip.inl">
+      <Filter>src\libGLESv2\renderer</Filter>
+    </None>
     <ClCompile Include="..\..\src\libGLESv2\renderer\d3d11\Clear11.cpp">
       <Filter>src\libGLESv2\renderer\d3d11</Filter>
     </ClCompile>
