Use commit_id.py on Windows, and handle missing git.
This allows us to delete the Windows batch file.

Changes the commit_id script to take the working directory so that it
can be called from a different working directory than the angle
repository is in.

Renames the generated commit header to angle_commit.h. This is being
written to the shared generated code directory for the entire build,
and "commit.h" is insufficiently unique.

BUG=angle:669

Change-Id: I35e80411a7e8ba1e02ce3f6a4fc54ed4dbc918f3

--- a/projects/src/copy_compiler_dll.vcxproj
+++ b/projects/src/copy_compiler_dll.vcxproj
@@ -111,7 +111,7 @@
   <ItemGroup>
     <CustomBuild Include="..\..\src\copy_compiler_dll.bat">
       <FileType>Document</FileType>
-      <Command>call call $(OutDir)obj\global_intermediate\copy_compiler_dll.bat &quot;$(Platform)&quot; &quot;C:\Program Files (x86)\Windows Kits\8.0&quot; &quot;$(OutDir)&quot;</Command>
+      <Command>call call $(OutDir)obj\global_intermediate\angle\copy_compiler_dll.bat &quot;$(Platform)&quot; &quot;C:\Program Files (x86)\Windows Kits\8.0&quot; &quot;$(OutDir)&quot;</Command>
       <Message>Copying D3D Compiler DLL...</Message>
       <Outputs>$(OutDir)\D3DCompiler_46.dll</Outputs>
     </CustomBuild>
