Use commit_id.py on Windows, and handle missing git.
This allows us to delete the Windows batch file.

Changes the commit_id script to take the working directory so that it
can be called from a different working directory than the angle
repository is in.

Renames the generated commit header to angle_commit.h. This is being
written to the shared generated code directory for the entire build,
and "commit.h" is insufficiently unique.

BUG=angle:669

Change-Id: I35e80411a7e8ba1e02ce3f6a4fc54ed4dbc918f3

--- a/projects/samples/hello_triangle.vcxproj
+++ b/projects/samples/hello_triangle.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{3F4D97A9-0809-E0E4-5A3F-B6ACB6EABB46}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>hello_triangle</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
