--- a/projects/samples/essl_to_glsl.vcxproj
+++ b/projects/samples/essl_to_glsl.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{293E74D1-544C-D368-02A0-52F61A4D0679}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>essl_to_glsl</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
