--- a/projects/samples/sample_util.vcxproj
+++ b/projects/samples/sample_util.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{297C46B0-9263-A9EA-82B1-EA221E7D7C7F}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>sample_util</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
@@ -112,33 +113,33 @@
     <None Include="..\..\samples\samples.gyp"/>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\samples\angle\sample_util\Window.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\path_utils.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\Vector.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\keyboard.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\shader_utils.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\Matrix.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\Timer.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\mouse.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\geometry_utils.h"/>
     <ClInclude Include="..\..\samples\angle\sample_util\Event.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\random_utils.h"/>
-    <ClInclude Include="..\..\samples\angle\sample_util\tga_utils.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\Matrix.h"/>
     <ClInclude Include="..\..\samples\angle\sample_util\SampleApplication.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\Timer.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\Vector.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\Window.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\geometry_utils.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\keyboard.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\mouse.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\path_utils.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\random_utils.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\shader_utils.h"/>
     <ClInclude Include="..\..\samples\angle\sample_util\texture_utils.h"/>
+    <ClInclude Include="..\..\samples\angle\sample_util\tga_utils.h"/>
     <ClInclude Include="..\..\samples\angle\sample_util\win32\Win32Timer.h"/>
     <ClInclude Include="..\..\samples\angle\sample_util\win32\Win32Window.h"/>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\samples\angle\sample_util\Window.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\texture_utils.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\Vector.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\shader_utils.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\SampleApplication.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\geometry_utils.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\tga_utils.cpp"/>
-    <ClCompile Include="..\..\samples\angle\sample_util\random_utils.cpp"/>
     <ClCompile Include="..\..\samples\angle\sample_util\Matrix.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\SampleApplication.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\Vector.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\Window.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\geometry_utils.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\random_utils.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\shader_utils.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\texture_utils.cpp"/>
+    <ClCompile Include="..\..\samples\angle\sample_util\tga_utils.cpp"/>
     <ClCompile Include="..\..\samples\angle\sample_util\win32\Win32Timer.cpp"/>
     <ClCompile Include="..\..\samples\angle\sample_util\win32\Win32Window.cpp"/>
     <ClCompile Include="..\..\samples\angle\sample_util\win32\Win32_path_utils.cpp"/>
