--- a/projects/src/copy_compiler_dll.vcxproj
+++ b/projects/src/copy_compiler_dll.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{22DC02D5-1598-943C-13E1-82185B469F81}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>copy_compiler_dll</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
