--- a/projects/src/copy_scripts.vcxproj
+++ b/projects/src/copy_scripts.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{63FB0B97-D1D9-5158-8E85-7F5B1E403817}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>copy_scripts</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
@@ -108,12 +109,6 @@
       <Command>call mkdir &quot;$(OutDir)obj\global_intermediate&quot; 2&gt;nul &amp; set ERRORLEVEL=0 &amp; copy /Y &quot;..\..\src\commit_id.py&quot; &quot;$(OutDir)obj\global_intermediate\commit_id.py&quot;</Command>
       <Message>Copying commit_id.py to $(OutDir)obj/global_intermediate\commit_id.py</Message>
       <Outputs>$(OutDir)obj\global_intermediate\commit_id.py</Outputs>
-    </CustomBuild>
-    <CustomBuild Include="..\..\src\commit_id.bat">
-      <FileType>Document</FileType>
-      <Command>call mkdir &quot;$(OutDir)obj\global_intermediate&quot; 2&gt;nul &amp; set ERRORLEVEL=0 &amp; copy /Y &quot;..\..\src\commit_id.bat&quot; &quot;$(OutDir)obj\global_intermediate\commit_id.bat&quot;</Command>
-      <Message>Copying commit_id.bat to $(OutDir)obj/global_intermediate\commit_id.bat</Message>
-      <Outputs>$(OutDir)obj\global_intermediate\commit_id.bat</Outputs>
     </CustomBuild>
     <CustomBuild Include="..\..\src\copy_compiler_dll.bat">
       <FileType>Document</FileType>
