--- a/projects/src/preprocessor.vcxproj
+++ b/projects/src/preprocessor.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{C7BAF548-697D-2DCB-9DF3-9D1506A7B444}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>preprocessor</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
@@ -109,38 +110,38 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\..\src\angle.gyp"/>
     <None Include="..\..\src\compiler\preprocessor\ExpressionParser.y"/>
     <None Include="..\..\src\compiler\preprocessor\Tokenizer.l"/>
+    <None Include="..\..\src\angle.gyp"/>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Tokenizer.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Lexer.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Token.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Preprocessor.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\ExpressionParser.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\MacroExpander.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Macro.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\pp_utils.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\Input.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\SourceLocation.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\numeric_lex.h"/>
-    <ClInclude Include="..\..\src\compiler\preprocessor\DirectiveParser.h"/>
     <ClInclude Include="..\..\src\compiler\preprocessor\DiagnosticsBase.h"/>
     <ClInclude Include="..\..\src\compiler\preprocessor\DirectiveHandlerBase.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\DirectiveParser.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\ExpressionParser.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Input.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Lexer.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Macro.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\MacroExpander.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Preprocessor.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\SourceLocation.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Token.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\Tokenizer.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\numeric_lex.h"/>
+    <ClInclude Include="..\..\src\compiler\preprocessor\pp_utils.h"/>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\compiler\preprocessor\DiagnosticsBase.cpp"/>
+    <ClCompile Include="..\..\src\compiler\preprocessor\DirectiveHandlerBase.cpp"/>
+    <ClCompile Include="..\..\src\compiler\preprocessor\DirectiveParser.cpp"/>
     <ClCompile Include="..\..\src\compiler\preprocessor\ExpressionParser.cpp"/>
     <ClCompile Include="..\..\src\compiler\preprocessor\Input.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\Tokenizer.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\DirectiveHandlerBase.cpp"/>
     <ClCompile Include="..\..\src\compiler\preprocessor\Lexer.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\Token.cpp"/>
     <ClCompile Include="..\..\src\compiler\preprocessor\Macro.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\DiagnosticsBase.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\Preprocessor.cpp"/>
-    <ClCompile Include="..\..\src\compiler\preprocessor\DirectiveParser.cpp"/>
     <ClCompile Include="..\..\src\compiler\preprocessor\MacroExpander.cpp"/>
+    <ClCompile Include="..\..\src\compiler\preprocessor\Preprocessor.cpp"/>
+    <ClCompile Include="..\..\src\compiler\preprocessor\Token.cpp"/>
+    <ClCompile Include="..\..\src\compiler\preprocessor\Tokenizer.cpp"/>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets"/>
   <ImportGroup Label="ExtensionTargets"/>
