--- a/projects/src/translator.vcxproj
+++ b/projects/src/translator.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{C15697F6-5057-016E-BD29-422971875679}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>translator</RootNamespace>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props"/>
   <PropertyGroup Label="Configuration">
