Use libnativewindow for Android builds
To avoid references to libEGL.so do not link with libandroid,
use libnativewindow instead. libnativewindow is available in
android-26 and newer.
The appropriate library will be selected based on the ndk level
configured. If ndk revision is 26 or higher, we'll link to
libnativewindow otherwise use libandroid.
The ANGLE apk needs to use 26 or higher.

Bug: angleproject:2418
Change-Id: I96509e5d645d132a34734558cd0566f1812b615b

--- a/gni/angle.gni
+++ b/gni/angle.gni
@@ -27,10 +27,14 @@ data_dir = "angledata"
 declare_args() {
   if (!is_android) {
     ndk_supports_vulkan = false
+    ndk_supports_nativewindow = false
   } else {
     ndk_supports_vulkan =
-        (current_cpu == "arm" && android32_ndk_api_level >= 24) ||
-        (current_cpu == "arm64" && android64_ndk_api_level >= 24)
+        (android_64bit_current_cpu == false && android32_ndk_api_level >= 24) ||
+        (android_64bit_current_cpu == true && android64_ndk_api_level >= 24)
+    ndk_supports_nativewindow =
+        (android_64bit_current_cpu == false && android32_ndk_api_level >= 26) ||
+        (android_64bit_current_cpu == true && android64_ndk_api_level >= 26)
   }
   angle_shared_libvulkan = false
   angle_libs_suffix = ""
